<resources>
    <string name="app_name">Driver Helper</string>
    <string name="auth_login_header">Авторизация</string>
    <string name="auth_login">Логин</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_login_btn">Войти</string>
    <string name="auth_signup_header">Регистрация</string>
    <string name="auth_password_conf">Подтверждение пароля</string>
    <string name="auth_signup_btn">Зарегестрироваться</string>
    <string name="settings">Настройки</string>
    <string name="error_description_password_length">Длина пароля должна составлять хотя бы 8 символов.</string>
    <string name="password_toggle_content_desc">Показать/спрятать пароль</string>
    <string name="to_signup_string">Создать аккаунт</string>
    <string name="to_login_string">Уже есть аккаунт</string>
    <string name="weather_desc">Погода</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_contact">Новый контакт</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="back">Назад</string>
    <string name="change">Редактировать</string>
    <string name="compas">Компас</string>
    <string name="station">Заправки</string>
    <string name="maps">Карты</string>
    <string name="sos">SOS</string>
    <string name="stopwatch_header">Время в пути:</string>
    <string name="start_time">00:00:00</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="start">Начать</string>
    <string name="stop">Завершить</string>
    <string name="reset">Очистить</string>
    <string name="driver_header">Инфо о водителе</string>
    <string name="last_name">Фамилия</string>
    <string name="second_name">Отчество</string>
    <string name="disease">Хронические заболевания</string>
    <string name="drugs">Принимаемые лекарства</string>
    <string name="rh_factor">Резус</string>
    <string name="blood_type">Группа крови</string>
    <string name="max_ride_time">Предельное время поездки</string>
    <string name="zero">00</string>
    <string name="colon">:</string>
    <string name="insurance">Страховка</string>
    <string name="medicine">Медицинские данные</string>
    <string name="vehicle_maintenance">Техническое обслуживание</string>
    <string name="upload">Загрузить</string>
</resources>