<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_bg"
    tools:context=".ui.auth.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/headerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_signup_header"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:layout_marginTop="150dp"/>

            <TextView
                android:id="@+id/errorSignupTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ErrorTextAppearance"
                android:layout_marginTop="10dp"
                android:text=""/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameSignupInputLayout"
                style="@style/TextInputLayoutUsername"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameSignupEditText"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:background="@drawable/edt_background"
                    android:hint="@string/auth_login"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordSignupInputLayout"
                style="@style/TextInputLayoutPassword"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordSignupEditText"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@drawable/edt_background"
                    android:hint="@string/auth_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confPasswordSignupInputLayout"
                style="@style/TextInputLayoutPassword"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confPasswordSignupEditText"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:background="@drawable/edt_background"
                    android:hint="@string/auth_password_conf"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submitSignupButton"
                style="@style/VioletButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/auth_signup_btn" />

            <TextView
                android:id="@+id/toLoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/NavigateTextAppearance"
                android:layout_marginTop="5dp"
                android:text="@string/to_login_string"
                android:layout_marginBottom="150dp"/>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <View
            android:id="@+id/signupOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/signupProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"  />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>